chore: let ai run wild

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 LINEAR_API_KEY=lin_api_xxxxx
 GITHUB_TOKEN=ghp_xxxxx
 GITHUB_USERNAME=nlewis84
+GITHUB_REPO=nlewis84/weekly-summary
 CURSOR_API_KEY=sk-xxxxx
