--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 node_modules/
 .env
-2026-weekly-work-summaries/
+/2026-weekly-work-summaries/2025-annual-review.md
 .cursor/
 build/
 .react-router/
