--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "@react-router/node": "^7.10.0",
     "@react-router/serve": "^7.10.0",
     "dotenv": "^17.2.4",
