chore: ai going off

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,8 @@ LINEAR_API_KEY=lin_api_xxxxx
 GITHUB_TOKEN=ghp_xxxxx
 GITHUB_USERNAME=nlewis84
 GITHUB_REPO=nlewis84/weekly-summary
+# Comma-separated paths for weekly summaries (e.g. 2025-weekly-work-summaries,2026-weekly-work-summaries)
+# GITHUB_SUMMARY_PATHS=2026-weekly-work-summaries
+# Slack Incoming Webhook URL for "Post to Slack" (create at api.slack.com/apps)
+# SLACK_WEBHOOK_URL=https://hooks.slack.com/services/T.../B.../...
 CURSOR_API_KEY=sk-xxxxx
