--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "dev": "react-router dev",
     "start": "react-router-serve build/server/index.js",
     "cli": "tsx weekly-summary.ts",
+    "cli:transcript": "tsx scripts/transcript-cli.ts",
     "typecheck": "react-router typegen && tsc",
     "lint": "eslint .",
+    "format": "prettier --write \"app/**/*.{ts,tsx,css}\" \"lib/**/*.ts\" \"e2e/**/*.ts\"",
     "test": "vitest",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@react-router/node": "^7.10.0",
     "@react-router/serve": "^7.10.0",
+    "@tremor/react": "^3.18.7",
     "dotenv": "^17.2.4",
+    "jszip": "^3.10.1",
     "phosphor-react": "^1.4.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
@@ -26,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@playwright/test": "^1.58.1",
     "@react-router/dev": "^7.10.0",
     "@react-router/fs-routes": "^7.10.0",
     "@tailwindcss/vite": "^4.1.17",
@@ -34,10 +41,12 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.2",
+    "prettier": "^3.8.1",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.54.0",
     "vite": "^7.2.6",
+    "vite-plugin-pwa": "^1.2.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^4.0.15"
   },
