--- a/package.json
+++ b/package.json
@@ -21,14 +21,20 @@
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@react-router/node": "^7.10.0",
     "@react-router/serve": "^7.10.0",
-    "@tremor/react": "^3.18.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.4",
     "jszip": "^3.10.1",
+    "lucide-react": "^0.563.0",
     "phosphor-react": "^1.4.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-router": "^7.10.0",
-    "tsx": "^4.19.0"
+    "recharts": "2.15.4",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.0",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
