chore: updated summaries

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ LINEAR_API_KEY=lin_api_xxxxx
 GITHUB_TOKEN=ghp_xxxxx
 GITHUB_USERNAME=nlewis84
 GITHUB_REPO=nlewis84/weekly-summary
+# For commits_pushed: org and comma-separated repos (default: ApollosProject + apollos-admin,apollos-cluster,apollos-platforms,git-for-sql)
+# GITHUB_ORG=ApollosProject
+# GITHUB_COMMIT_REPOS=apollos-admin,apollos-cluster,apollos-platforms,git-for-sql
 # Comma-separated paths for weekly summaries (e.g. 2025-weekly-work-summaries,2026-weekly-work-summaries)
 # GITHUB_SUMMARY_PATHS=2026-weekly-work-summaries
 # Slack Incoming Webhook URL for "Post to Slack" (create at api.slack.com/apps)
