chore: fix pr comments charts

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "react-router-serve build/server/index.js",
     "cli": "tsx weekly-summary.ts",
     "cli:transcript": "tsx scripts/transcript-cli.ts",
+    "fetch-pr-comments": "tsx scripts/fetch-pr-comments-by-date.ts",
     "typecheck": "react-router typegen && tsc",
     "lint": "eslint .",
     "format": "prettier --write \"app/**/*.{ts,tsx,css}\" \"lib/**/*.ts\" \"e2e/**/*.ts\"",
