--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cli": "tsx weekly-summary.ts",
     "cli:transcript": "tsx scripts/transcript-cli.ts",
     "fetch-pr-comments": "tsx scripts/fetch-pr-comments-by-date.ts",
+    "backfill-linear-created": "tsx scripts/backfill-linear-issues-created.ts",
     "typecheck": "react-router typegen && tsc",
     "lint": "eslint .",
     "format": "prettier --write \"app/**/*.{ts,tsx,css}\" \"lib/**/*.ts\" \"e2e/**/*.ts\"",
